HNC-489 - added crosses if the cover doesn't have certain cover - fixed bug with not showing cover amount in snapshot for landlords

--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -535,12 +535,17 @@
 
 .landlord-filters {
 	i {
-		color: @tick-color;
 		line-height: 1.5;
 		padding-right: 0.25rem;
 	}
+	.icon-skinny-tick {
+		color: @tick-color;
+	}
+	.icon-cross, .not-active {
+		color: #999999;
+	}
 	span {
 		font-size: 12px;
-		padding-right: 1rem;
+		padding-right: 2rem;
 	}
 }
